@navikt/core/css/src/data-table.css
/* ... */
.aksel-data-table__tfoot {
  background-color: var(--ax-bg-raised);
}

.aksel-data-table__filler-cell {
  display: table-cell;
  padding: 0;
  width: auto;
}

.aksel-data-drag-and-drop__drag-handler__button {
  height: 1.5rem;
  position: relative;
  background: transparent;
  border: none;
  padding: 0;

  &:hover {
    cursor: grab;
  }

  &:focus-visible,
  &[data-drag-handler-active="true"] {
    outline: 2px solid var(--ax-border-focus);
    outline-offset: -1px;
    border-radius: var(--ax-radius-8);
  }
}

.aksel-data-table__drag-and-drop-item {
  background-color: var(--ax-bg-default);

  &[data-overlay="true"] {
    width: 100%;
    opacity: 0.8;
    box-shadow: var(--ax-shadow-dialog);
  }

  /* TODO - might be removable */
  &[data-keyboard-dragging="true"] {
    .aksel-data-drag-and-drop__drag-handler__button {
      outline: 2px solid var(--ax-border-focus);
      outline-offset: -1px;
      border-radius: var(--ax-radius-8);
    }
  }

  &[data-drop-target="true"]:not([data-overlay="true"]) {
    background: var(--ax-bg-neutral-moderate);
  }
}

.aksel-data-drag-and-drop__drag-handler__alt,
.aksel-data-drag-and-drop__drag-handler {
  position: relative;
  height: 1.5rem;

  .aksel-data-drag-and-drop__drag-handler__arrow {
    height: 1.8rem;
    position: absolute;
    left: 50%;
    transform: translate(-50%, -50%);
    background: var(--ax-bg-default);
    border: none;
    cursor: pointer;
    padding: 0;
    border-radius: 50%;
    z-index: 1;

    &[data-direction="up"] {
      top: -18px;
    }

    &[data-direction="down"] {
      bottom: calc(-100% - 22px);
    }

    &:disabled {
      opacity: 0.8;
      cursor: not-allowed;
    }
  }
}

.aksel-data-table__empty-state {
  display: grid;
  place-content: center;
  padding-block: var(--ax-space-32);
  padding-inline: var(--ax-space-16);
  text-align: center;
  gap: var(--ax-space-8);
  justify-items: center;
}

.aksel-data-table__loading-state {
  display: grid;
  place-content: center;
  padding-block: var(--ax-space-32);
  padding-inline: var(--ax-space-16);
  text-align: center;
  gap: var(--ax-space-8);
  justify-items: center;
  position: relative;
}

@keyframes animateDataTableLoading {
  0% {
    inset-inline-start: 0;
    inline-size: 0;
  }

  20% {
    inset-inline-start: 0;
    inline-size: 40%;
  }

  80% {
    inset-inline-start: 60%;
    inline-size: 40%;
  }

  100% {
    inset-inline-start: 100%;
    inline-size: 0;
  }
}

/* TODO: Look to handle "inline"-checkbox better than custom CSS-overrides in the future. */
.aksel-data-table tr .aksel-checkbox {
  padding: 0;
}

.aksel-data-table tr .aksel-checkbox:focus-within::after {
  inset: 0;
}

/* TODO -
* This is needed to prevent the cursor from changing back to default when dragging over interactive elements in the row.
* Not sure if this is the best approach or breaks styling elsewhere */
html[data-dragging-cursor="true"],
html[data-dragging-cursor="true"] *,
html[data-dragging-cursor="true"] *::before,
html[data-dragging-cursor="true"] *::after {
  cursor: grabbing !important;
}

/* TODO: alignment not optimal when resizing column with nesting */
.aksel-data-table__nested-toggle {
  position: absolute;
  inset-block: 0;
  left: calc(var(--__axc-data-table-pi-cell) + var(--__axc-data-table-nested-depth) * var(--ax-space-16));
  display: flex;
  align-items: center;
}

.aksel-data-table__details-panel-row {
  box-shadow: inset 1px 1px 0 0 var(--ax-border-neutral-subtle);
}

